8240263: Assertion-only call in Method::link_method affecting product builds

Reviewed-by: shade, dcubed, iklam